tests/syntax_error/import1.jou
from "stdlib/io.jou" import 1  # Error: expected the name of a symbol to import, got an integer
